<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="#F8EEEC"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="374dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/top_background1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/welcBck"
                android:textColor="#EA6D35"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:textColor="@color/black"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/emailHintLog"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="#756C6C" />

            <EditText
                android:id="@+id/passwordLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:textColor="@color/black"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/passHintLog"
                android:inputType="textPassword"
                android:padding="8dp"

                android:textColorHint="#756C6C" />

            <Button
                android:id="@+id/nextPageInBtn"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_arraw1"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:drawableEnd="@drawable/facebook"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/fb"
                    android:textColor="#3b608c"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:drawableEnd="@drawable/google"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/gle"
                    android:textColor="#3b608c"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/signUpTxtBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/newUsr"
                android:textAlignment="center"
                android:textColor="#3B608C"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>